// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display measure badge params 1`] = `
<div>
  <label
    className="spacer-right"
    htmlFor="badge-metric"
  >
    overview.badges.metric
    :
  </label>
  <Select
    className="input-medium it__metric-badge-select"
    isSearchable={false}
    name="badge-metric"
    onChange={[Function]}
    options={[]}
  />
  <label
    className="spacer-right spacer-top"
    htmlFor="badge-format"
  >
    format
    :
  </label>
  <Select
    className="input-medium"
    defaultValue={
      {
        "label": "overview.badges.options.formats.md",
        "value": "md",
      }
    }
    isSearchable={false}
    name="badge-format"
    onChange={[Function]}
    options={
      [
        {
          "label": "overview.badges.options.formats.md",
          "value": "md",
        },
        {
          "label": "overview.badges.options.formats.url",
          "value": "url",
        },
      ]
    }
  />
</div>
`;

exports[`should display quality gate badge params 1`] = `
<div>
  <label
    className="spacer-right"
    htmlFor="badge-format"
  >
    format
    :
  </label>
  <Select
    className="input-medium"
    defaultValue={
      {
        "label": "overview.badges.options.formats.md",
        "value": "md",
      }
    }
    isSearchable={false}
    name="badge-format"
    onChange={[Function]}
    options={
      [
        {
          "label": "overview.badges.options.formats.md",
          "value": "md",
        },
        {
          "label": "overview.badges.options.formats.url",
          "value": "url",
        },
      ]
    }
  />
</div>
`;
